# TerraSmart

./: .gitignore  LICENSE  README.md  plan.md  terrasmart  ts
.github/workflows/: release.yml  test.yml
apps/cli/: pyproject.toml
apps/cli/terrasmartrun/: __init__.py  cli.py  config.py  dsl.py  llm.py  render.py  tfexec.py  utils.py
apps/cli/tests/: __init__.py  test_config.py  test_dsl.py
deb/: build.sh  postinst.sh
schema/: dsl.schema.json
templates/: main.tf.j2  providers.tf.j2  worker.js
