[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terrasmart"
version = "0.1.0"
description = "Natural language to Terraform CLI for Cloudflare"
authors = [
    {name = "Fernando Reyes", email = "poeticguy@github.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "jsonschema>=4.0.0",
    "pyyaml>=6.0",
    "toml>=0.10.0",
    "requests>=2.28.0",
    "openai>=1.0.0",
]

[project.scripts]
terrasmart = "terrasmartrun.cli:main"

[project.urls]
Homepage = "https://github.com/poeticguy/terrasmart"
Repository = "https://github.com/poeticguy/terrasmart"
Issues = "https://github.com/poeticguy/terrasmart/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["terrasmartrun*"]

[tool.setuptools.package-data]
terrasmartrun = ["templates/*", "schema/*"]
